# DCRM

./: .gitignore  LICENSE  deploy_to_x1.md  hardhat.config.ts  package-lock.json  package.json  truffle-config.js  tsconfig.json
contracts/: PublicDataProof.sol  data_tag.sol  dividend.sol  dividend2.sol  dmc.sol  dmc2.sol  dmc2_bridge.sol  dmc_bridge.sol  erc721_nft_bridge.sol  erc721_nft_self_bridge.sol  erc721_with_meta.sol  example_nft_bridge.sol  exchange.sol  exchange2.sol  fake_nft_contract.sol  gwt.sol  gwt2.sol  liner_release.sol  luckymint.sol  nft_bridge.sol  owned_nft_bridge.sol  proposal.sol  pst.sol  pst_bridge.sol  public_data_storage.sol  public_data_storage2.sol  sortedlist.sol  sortedlist2.sol  storage_marketplace.sol  test_list.sol
doc/: DAO 合约介绍.md  DMC20 经济模型.md  DMCX 介绍.md  DMCX 经济模型.md  Introduce public_data_storage.md  TAG系统.md  deploy_to_x1.md  dmc20 介绍.md  gwt_mine.py  inscribe protocol.md  lucky mint protocol.md  order-state.drawio  order-state.md  prooftool.md  proposal.md  rules for the NFT inscription.md  self_create_any_nft.md  storage_logical.py  terms list.md  testcase.txt  user-story.md  公共数据挖矿介绍.md  分红合约.md  合约需求整理.docx  服务证明 通用设计.md  经济模型讨论
migrations/: 2_deploy_contracts.js
proof-tool/: Cargo.toml
proof-tool/src/: ercmerkle_tree.rs  main.rs
scripts/: ERCMerkleTree.ts  ERCMerkleTreeUtil.ts  deploy.ts  deploy_dmc2.ts  deploy_dmc2_bridge.ts  exchange_test.ts  generate_mixhash.ts  generate_proof.ts  generate_test_data.ts  update_dividend.ts
test/: test_data_tag.ts  test_dividend.ts  test_dividend2.ts  test_exchange.ts  (+7 more)
(+8 files in other folders)
