[package]
name = "proof_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"]  }
sha2 = "0.10"
sha3 = "0.10"
generic-array = "0.14"
serde_json = "1"
hex = "0.4"
rand = { version = "0.8", features = ["min_const_gen"] }
serde = { version = "1.0.208", features = ["derive"] }